Todos los cambios necesarios para garantizar el funcionamiento de la gestion del producto